force-app/main/default/objects/Zco_Screen_Pop__e/Zco_Screen_Pop__e.object-meta.xml
<CustomObject>
    <description>Workbook-defined screen pop platform event.</description>
    <label>Zco Screen Pop</label>
    <pluralLabel>Zco Screen Pop Events</pluralLabel>
</CustomObject>