force-app/main/default/objects/Zco_Screen_Pop__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>