force-app/main/default/objects/Zco_Screen_Pop__e/fields/Call_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Log_Id__c</fullName>
    <label>Call Log ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>