force-app/main/default/objects/Zco_Screen_Pop__e/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <label>Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>