force-app/main/default/objects/Zco_Screen_Pop__e/fields/Match_Result__c.field-meta.xml
<CustomField>
    <fullName>Match_Result__c</fullName>
    <label>Match Result</label>
    <length>40</length>
    <type>Text</type>
</CustomField>